maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: not found: value random
var random3:Int = random() + random() + random()
                  ^